5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1826_1651.log
== TEST (2019-06-12 18:19:09) 
-- CODE:
from numpy import*
cont = zeros(6 , dtype=int)
var = input("tom de pele? ").upper.split(',')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:19:28) 
-- CODE:
from numpy import*
cont = zeros(6 , dtype=int)
var = input("tom de pele? ").upper.split(',')
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:20:23) 
-- CODE:
from numpy import*
cont = zeros(6 , dtype=int)
var = input("tom de pele? ").upper().split(",")
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:24:17) 
-- CODE:
from numpy import*
cont = zeros(6 , dtype=int)
var = input("tom de pele? ").upper().split(",")
for i in range(size(var)):
	if (var[i] == "MC"):
		cont[0] = cont[0]+1
print(cont[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:26:22) 
-- CODE:
from numpy import*
cont = zeros(6 , dtype=int)
var = input("tom de pele? ").upper().split(",")
for i in range(size(var)):
	if (var[i] == "MC"):
		cont[0] = cont[0]+1
	if (var[i] == "c"):
		cont(0) = cont[0] + 1
print(cont[0])
-- ERROR:
File "XXXX", line 8
    cont(0) = cont[0] + 1
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:26:53) 
-- CODE:
from numpy import*
cont = zeros(6 , dtype=int)
var = input("tom de pele? ").upper().split(",")
for i in range(size(var)):
	if (var[i] == "MC"):
		cont[0] = cont[0]+1
	if (var[i] == "c"):
		cont(1) = cont[1] + 1
print(cont)
-- ERROR:
File "XXXX", line 8
    cont(1) = cont[1] + 1
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:27:12) 
-- CODE:
from numpy import*
cont = zeros(6 , dtype=int)
var = input("tom de pele? ").upper().split(",")
for i in range(size(var)):
	if (var[i] == "MC"):
		cont[0] = cont[0]+1
	if (var[i] == "c"):
		cont[1] = cont[1] + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:27:49) 
-- CODE:
from numpy import*
cont = zeros(6 , dtype=int)
var = input("tom de pele? ").upper().split(",")
for i in range(size(var)):
	if (var[i] == "MC"):
		cont[0] = cont[0]+1
	if (var[i] == "C"):
		cont[1] = cont[1] + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:29:55) 
-- CODE:
from numpy import*
cont = zeros(6 , dtype=int)
var = input("tom de pele? ").upper().split(",")
for i in range(size(var)):
	if (var[i] == "MC"):
		cont[0] = cont[0]+1
	if (var[i] == "C"):
		cont[1] = cont[1] + 1
	if (var[i] == "CM"):
		cont[2] = cont[2] + 1
print(size(var))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:33:26) 
-- CODE:
from numpy import*
cont = zeros(6 , dtype=int)
var = input("tom de pele? ").upper().split(",")
for i in range(size(var)):
	if (var[i] == "MC"):
		cont[0] = cont[0]+1
	if (var[i] == "C"):
		cont[1] = cont[1] + 1
	if (var[i] == "CM"):
		cont[2] = cont[2] + 1
	if (var[i] == "EM"):
		cont[3] = cont[3] + 1
	if (var[i] == "E"):
		cont[4] = cont[4] + 1
	if (var[i] == "ME"):
		cont[5] = cont[5] + 1
print(size(var))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:35:37) 
-- CODE:
from numpy import*
cont = zeros(6 , dtype=int)
var = input("tom de pele? ").upper().split(",")
for i in range(size(var)):
	if (var[i] == "MC"):
		cont[0] = cont[0]+1
	if (var[i] == "C"):
		cont[1] = cont[1] + 1
	if (var[i] == "CM"):
		cont[2] = cont[2] + 1
	if (var[i] == "EM"):
		cont[3] = cont[3] + 1
	if (var[i] == "E"):
		cont[4] = cont[4] + 1
	if (var[i] == "ME"):
		cont[5] = cont[5] + 1
print(2)
print(cont)
-- EXECUTION TIME:
1.00714
-- TEST CASE 1:
---- input:
MC,C,C,C,CM,EM,EM,ME,E
---- correct output:
3
[1 3 1 2 1 1]
---- user output:
2
[1 3 1 2 1 1]
-- TEST CASE 2:
---- input:
MC,C,C,C,CM,ME,EM,E,E
---- correct output:
3
[1 3 1 1 2 1]
---- user output:
2
[1 3 1 1 2 1]
-- TEST CASE 3:
---- input:
C,C,C,C,CM,EM,EM,ME,E
---- correct output:
4
[0 4 1 2 1 1]
---- user output:
2
[0 4 1 2 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
